# Boundary-Aware-AI-Companion

./: .gitignore  CLAUDE.md  README.md  RELATED_WORKS.md  _make_dataset_diagram.py  _make_eval_diagram.py  _make_plots.py  _make_presentation.py  conversation_generation.txt  presentation.pptx  pyproject.toml
.claude/: settings.local.json
data/: INTIMA.jsonl  icl_examples.json
data/results/: README.md
data/results/exp1_iso_gpu0_qwen2_5_32b-instruct-q4_K_M/: report.md  responses.jsonl  routing.csv  summary.csv
data/results/exp1_iso_gpu0_qwen2_5_72b-instruct-q4_K_M/: report.md  responses.jsonl  routing.csv  summary.csv
data/results/exp1_iso_gpu1_gemma2_27b-instruct-q4_K_M/: report.md  responses.jsonl  routing.csv  summary.csv
data/results/exp1_iso_gpu1_mistral-nemo_12b/: report.md  responses.jsonl  routing.csv  summary.csv
data/results/exp1_iso_gpu1_phi4_14b/: report.md  responses.jsonl  routing.csv  summary.csv
data/results/exp1_iso_gpu1_qwen3_30b-a3b-q4_K_M/: report.md  responses.jsonl  routing.csv  summary.csv
data/results/gemma3_27b/: judged_responses.jsonl  report.md  responses.jsonl  routing.csv  run_metadata.json  summary.csv
data/results/llama3_1_8b-instruct-q4_K_M/: judged_responses.jsonl  report.md  responses.jsonl  routing.csv  run_metadata.json  summary.csv
data/results/mistral-nemo_12b/: report.md  (+5 more)
outputs/: intima_complete.jsonl
scripts/: __init__.py  run_generation.py
src/boundary_aware/: cli.py
tests/: test_boundary_agent.py  test_interaction_agent.py  test_ollama_client.py  test_risk_monitor.py  test_schemas.py  test_workflow.py
(+32 files in other folders)
