[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boundary-aware"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.2",
    "pydantic>=2.0",
    "httpx>=0.27",
    "typer>=0.12",
    "anthropic>=0.28",
    "openai>=1.0",
    "datasets>=2.0",
    "pandas>=2.0",
    "tqdm>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
boundary-aware = "boundary_aware.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
